--- a/Video_to_Audio_Conversion.ipynb
+++ b/Video_to_Audio_Conversion.ipynb
@@ -28,7 +28,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Video to Audio Conversion**"
+        "----\n",
+        "## **Video to Audio Conversion**\n",
+        "----"
       ],
       "metadata": {
         "id": "SUzqlLyU9F69"
@@ -37,7 +39,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Install necessary packages**"
+        "----\n",
+        "### **Install necessary packages**\n",
+        "----"
       ],
       "metadata": {
         "id": "Wjs6zEUwFAkl"
@@ -82,7 +86,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Program for converting video to audio**"
+        "----\n",
+        "#### **Program for converting video to audio**\n",
+        "----"
       ],
       "metadata": {
         "id": "ZVta7SwlFXk8"
@@ -105,6 +111,17 @@
         "    clip = VideoFileClip(video_file)\n",
         "    clip.audio.write_audiofile(f\"{filename}.{output_ext}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "----\n",
+        "#### **Uploading Video**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "76Y0OeOtmLCA"
+      }
     },
     {
       "cell_type": "code",
@@ -327,6 +344,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "----\n",
+        "#### **Converting Video to Audio**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "5WCeXPI4mVYk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "convert_video_to_audio_moviepy('/content/Flute Meditation  Krishna flute music  Positive Energy [30 minute Meditation].mp4')"
@@ -369,15 +397,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "URVzRcyJLvHa"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
